Menstrual Cycle Tracker linked with the main page

--- a/calhealth/Menstrual-Cycle-Tracker.html
+++ b/calhealth/Menstrual-Cycle-Tracker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veggie Smart - Menstrual Cycle Tracker Calculator</title>
+    <title>Veggie Smart - Menstrual Cycle Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <meta name="description" content="Advanced Menstrual Cycle Tracker Calculator to help users predict periods, ovulation, and track symptoms efficiently.">
     <meta name="keywords" content="Menstrual Cycle Tracker, Period Calculator, Ovulation Prediction, Symptom Tracker, Fertility Calculator, Veggie Smart">
@@ -46,7 +46,7 @@
 </head>
 <body>
     <div class="container bg-gray-800 rounded-lg p-6 mt-10">
-        <h1 class="text-3xl font-bold mb-6 text-center text-white">Menstrual Cycle Tracker Calculator</h1>
+        <h1 class="text-3xl font-bold mb-6 text-center text-white">Menstrual Cycle Tracker</h1>
         <form id="menstrualCycleForm" class="space-y-4">
             <div>
                 <label for="cycleStartDate" class="block text-sm font-medium text-gray-300">Cycle Start Date:</label>
@@ -134,6 +134,8 @@
             <li><strong>Privacy Controls:</strong> Manage your data securely with options for data export and deletion.</li>
         </ul>
     </div>
+    <footer id="footer"></footer>
     <script src="Menstrual-Cycle-Tracker.js"></script>
+    <script src="./../scripts/footer.js"></script>
 </body>
 </html>
