--- a/index.html
+++ b/index.html
@@ -137,6 +137,17 @@
                         </div>
                     </div>
                 </a>
+                <a href="./MarketCal/MarketShareCalculator.html">
+                    <div class="calbtn">
+                        <div>
+                            <img src="https://img.icons8.com/isometric/800/share.png" alt="Calculator" loading="lazy">
+                        </div>
+                        <div class="btnsecondsection">
+                            <span class="btn-tagname">Free</span>
+                            <h4 class="btn-name">Market Share Cal</h4>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="calculator">
